--- a/sass/bootstrap-overrides.scss
+++ b/sass/bootstrap-overrides.scss
@@ -5,14 +5,18 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
-$enable-flex:               true;
-$enable-grid-classes:       true;
+$enable-flex: true;
+$enable-grid-classes: true;
+$enable-rounded: false;
 
 @import "bootstrap/functions";
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
+
 @import "bootstrap/root";
 @import "bootstrap/reboot";
+@import "bootstrap/utilities";
 @import "bootstrap/grid";
 @import "bootstrap/forms";
+@import "bootstrap/images";
 @import "bootstrap/print";
