--- a/sass/template/_fonts.scss
+++ b/sass/template/_fonts.scss
@@ -55,76 +55,18 @@
     font-style: normal;
 }
 
-
-
-
-
-
-
-
-
-
-
 @font-face {
-    font-family: 'Lato';
-    src: url('../fonts/lato-bold-webfont.woff2') format('woff2'),
-         url('../fonts/lato-bold-webfont.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Lato';
-    src: url('../fonts/lato-bolditalic-webfont.woff2') format('woff2'),
-         url('../fonts/lato-bolditalic-webfont.woff') format('woff');
-    font-weight: bold;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Lato';
-    src: url('../fonts/lato-italic-webfont.woff2') format('woff2'),
-         url('../fonts/lato-italic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Lato';
-    src: url('../fonts/lato-regular-webfont.woff2') format('woff2'),
-         url('../fonts/lato-regular-webfont.woff') format('woff');
+    font-family: 'OpenSansExtraBold';
+    src: url('../fonts/opensans-extrabold-webfont.woff2') format('woff2'),
+         url('../fonts/opensans-extrabold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Oswald';
-    src: url('../fonts/oswald-regular-webfont.woff2') format('woff2'),
-         url('../fonts/oswald-regular-webfont.woff') format('woff');
+    font-family: 'OpenSansExtraBold';
+    src: url('../fonts/opensans-extrabolditalic-webfont.woff2') format('woff2'),
+         url('../fonts/opensans-extraolditalic-webfont.woff') format('woff');
     font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Oswald';
-    src: url('../fonts/oswald-regularitalic-webfont.woff2') format('woff2'),
-         url('../fonts/oswald-regularitalic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Oswald';
-    src: url('../fonts/oswald-bold-webfont.woff2') format('woff2'),
-         url('../fonts/oswald-bold-webfont.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Oswald';
-    src: url('../fonts/oswald-bolditalic-webfont.woff2') format('woff2'),
-         url('../fonts/oswald-bolditalic-webfont.woff') format('woff');
-    font-weight: bold;
     font-style: italic;
 }
