courses details, listing, register - first step

--- a/sass/bootstrap-overrides.scss
+++ b/sass/bootstrap-overrides.scss
@@ -19,4 +19,5 @@ $enable-rounded: false;
 @import "bootstrap/grid";
 @import "bootstrap/forms";
 @import "bootstrap/images";
+@import "bootstrap/dropdown";
 @import "bootstrap/print";
