--- a/sass/template/_main.scss
+++ b/sass/template/_main.scss
@@ -196,6 +196,7 @@ i {
     background: #292c37;
     display: block;
     &-slider {
+        padding-left: 0;
         &-inner {
             // margin-left: -20vw;
             height: 100%; 
@@ -210,7 +211,7 @@ i {
                 position: relative;
                 &-data {
                     height: 100%;
-                    position: absolute;
+                    float: right;
                     z-index: 110;
                 }
                 &-image {
@@ -218,17 +219,85 @@ i {
                     height: 100%;
                     position: absolute;
                     z-index: 100;
+                    @include display-flex;
+                    img {
+                        object-fit: cover;
+                    }
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        bottom: 0;
+                        left: 0;
+                        z-index: 1;
+                        background: rgba(#000000, 0.2);
+                    }
                 }
                 &-title {
-
+                    margin: 4rem 0 2rem 0;
+                    color: #ffffff;
+                    font: normal 2.571rem/120% $font-title-extra;
+                    text-shadow: 0 0 20px #000000;
                 }
                 &-time {
-
+                    margin: 0 0 8px 0;
+                    padding: 5px 10px;
+                    color: #ffffff;
+                    background: $main-color; 
+                    display: inline-block;
                 }
                 &-text {
-                    
+                    padding: 5px 10px;
+                    width: 70%;
+                    color: #ffffff;
+                    background: #000000;
+                    display: block;
+                }
+                .btn {
+                    position: absolute;
+                    right: 30px;
+                    bottom: 30px;
                 }
             }
+        }
+        &-dots {
+            position: absolute;
+            bottom: 0;
+            right: 30px;
+            .slick-dots {
+                margin: 0 0 30px 0;
+                padding: 0;
+                list-style: none;
+                text-align: left;
+                li {
+                    margin: 0 13px 5px 0;
+                    padding: 0;
+                    display: inline-block;
+                    button {
+                        padding: 0;
+                        width: 14px;
+                        height: 14px;
+                        border: 0;
+                        display: block;
+                        outline: none;
+                        font-size: 0;
+                        line-height: 0;
+                        background: transparent;
+                        border-radius: 50%;
+                        box-shadow: 0 0 0 3px #ffffff;
+
+                        @include transition(all .2s);
+                    }
+                    &.slick-active {
+                        button {
+                            background: #ffffff;
+                            box-shadow: 0 0 0 5px #ffffff;
+                        }
+                    }
+                }
+            }
+
         }
 
     }
