--- a/sass/bootstrap-overrides.scss
+++ b/sass/bootstrap-overrides.scss
@@ -8,6 +8,7 @@
 $enable-flex: true;
 $enable-grid-classes: true;
 $enable-rounded: false;
+$enable-caret: false;
 
 @import "bootstrap/functions";
 @import "bootstrap/variables";
