--- a/sass/template/_content.scss
+++ b/sass/template/_content.scss
@@ -375,4 +375,9 @@
     &-tax {
         font: bold 1.286rem/100% $font-head;
     }
+    &--action {
+        margin-bottom: 20px;
+        font-size: 1.429rem;
+
+    }
 }
