--- a/css/dev.css
+++ b/css/dev.css
@@ -1,4 +1,4 @@
-@media (max-width: 767px) {
+@media (max-width: 575.98px) {
   body:before {
     content: "XS";
     width: 50px;
@@ -13,7 +13,7 @@
     bottom: 0;
     left: 0;
     z-index: 1000; } }
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 576px) and (max-width: 767.98px) {
   body:before {
     content: "SM";
     width: 50px;
@@ -28,7 +28,7 @@
     bottom: 0;
     left: 0;
     z-index: 1000; } }
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 768px) and (max-width: 991.98px) {
   body:before {
     content: "MD";
     width: 50px;
@@ -43,9 +43,24 @@
     bottom: 0;
     left: 0;
     z-index: 1000; } }
-@media (min-width: 1200px) {
+@media (min-width: 992px) and (max-width: 1199.98px) {
   body:before {
     content: "LG";
+    width: 50px;
+    height: 50px;
+    font-size: 15px;
+    line-height: 50px;
+    text-align: center;
+    display: block;
+    background: #cc0;
+    color: #000;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 1000; } }
+@media (min-width: 1200px) {
+  body:before {
+    content: "XL";
     width: 50px;
     height: 50px;
     font-size: 15px;
