--- a/sass/template/_content.scss
+++ b/sass/template/_content.scss
@@ -116,6 +116,12 @@
             border: 1px solid #dddddd;
         }
     }
+    &--contact {
+        .contentbox-main-hld {
+            margin-bottom: 60px;
+            border: 1px solid #dddddd;
+        }
+    }
     &-header {
         padding-top: 20px;
         padding-bottom: 20px;
@@ -136,6 +142,17 @@
             }
             .icon--location {
                 margin-left: 40px;
+            }
+            &--form {
+                .icon--calendar {
+                    @include inline-svg-icon("icon-calendar", #b0b0b0, center, 43px 41px);
+                }
+                .icon--location {
+                    @include inline-svg-icon("icon-location", #b0b0b0, center, 26px 26px);
+                }
+                p {
+                    color: #000000;
+                }
             }
 
         }
@@ -160,12 +177,18 @@
                 padding: 0;
                 color: #ffffff;
                 font: bold 2.571rem/110% $font-title;
+                &--form {
+                    color: #000000;
+                }
             }
             .subtitle {
                 margin: 15px 0;
                 padding: 0;
                 color: #bfc0c3;
                 font: italic 1.357rem/110% $font-title-sec;
+                &--form {
+                    color: #4c4c4c;
+                }
             }
         }
     }
@@ -178,7 +201,7 @@
 
         }
         ul {
-            margin: 0;
+            margin: 20px 0;
             padding: 0;
             list-style: none;
             li {
@@ -201,7 +224,7 @@
     }
     &-image-hld {
         float: right;position: absolute;top: 0;right: -40px;
-        z-index: 110;
+        z-index: 120;
         padding: 0;
         // width: 100%;
         // height: 100%;
@@ -236,15 +259,80 @@
         }
         .btn {
             margin: 0 20px;
+            vertical-align: top;
         }
-        .list-item--envelope {
-            margin-left: 20px;
+        .list--social {
+            margin: 0;
+            vertical-align: top;
+            .list-item--envelope {
+                margin-left: 20px;
+            }
+        }
+        .price-hld {
+            display: inline-block;
+            p {
+                margin: 0;
+            }
+        }
+    }
+}
+
+.contact {
+    &-details {
+        .header {
+            margin: 30px 0;
+        }
+        p {
+            margin-bottom: 1.5rem;
         }
 
     }
+    &-image {
+        &-hld {
+            overflow: hidden;
+            clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%);
+            -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%);
+        }
 
+    }
+    &-form {
+        .header {
+            margin: 30px 0;
+        }
+    }
 }
 
+.areasactivity {
+    padding: 35px 0 65px 0;
+    background: #ffffff;
+    .row {
+        margin-bottom: 80px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+    .data {
+        .header {
+            margin: 30px 0;
+
+        }
+    }
+    .image {
+
+    }
+    .is-odd {
+        .image {
+            text-align: right;
+        }
+
+    }
+    .is-even {
+        .image {
+            text-align: left;
+        }
+        @include flex-direction(row-reverse);
+    }
+}
 
 .list {
     margin: 0;
