--- a/sass/template/_content.scss
+++ b/sass/template/_content.scss
@@ -44,6 +44,13 @@
                     background: $main-color;
                 }
             }
+            a {
+                color: #000000;
+                text-decoration: none;
+                &:hover, &:focus {
+                    color: lighten(#000000, 40%);
+                }
+            }
         }
         &--content {
             margin: 15px 0 40px 0;
@@ -86,7 +93,7 @@
                 color: #ffffff;
                 text-decoration: none;
                 &:hover, &:focus {
-                    color: #ffffff;
+                    color: darken(#ffffff, 10%);
                 }
             }
         }
@@ -177,6 +184,13 @@
                 padding: 0;
                 color: #ffffff;
                 font: bold 2.571rem/110% $font-title;
+                a {
+                    color: #ffffff;
+                    text-decoration: none;
+                    &:hover, &:focus {
+                        color: darken(#ffffff, 10%);
+                    } 
+                }
                 &--form {
                     color: #000000;
                 }
@@ -223,14 +237,13 @@
 
     }
     &-image-hld {
-        float: right;position: absolute;top: 0;right: -40px;
-        z-index: 120;
         padding: 0;
-        // width: 100%;
-        // height: 100%;
-        // position: relative;
         overflow: hidden;
-        // @include display-flex;
+        float: right;
+        position: absolute;
+        top: 0;
+        right: -40px;
+        z-index: 120;
         clip-path: polygon(0 0, 90% 0, 100% 100%, 10% 100%);
         -webkit-clip-path: polygon(0 0, 90% 0, 100% 100%, 10% 100%);
         .label {
@@ -240,14 +253,12 @@
             top: 20px;
             left: 0;
             z-index: 100;
-            // @include skewX(-10deg);
         }
         img {
             min-width: 100%;
             min-height: 100%;
             object-fit: cover;
             @include transition(all .2s);
-            // @include skewX(-10deg);
         }
     }
     &-action {
@@ -318,6 +329,16 @@
         }
     }
     .image {
+        a {
+            img {
+                @include transition(all .2s);
+            }
+            &:hover, &:focus {
+                img {
+                    @include scale3d(1.10, 1.10, 1);
+                }
+            }
+        }
 
     }
     .is-odd {
