--- a/sass/template/_content.scss
+++ b/sass/template/_content.scss
@@ -12,6 +12,7 @@
             color: #000000;
             font: bold 1.429rem/100% $font-head;
             span {
+                display: inline-block;
                 position: relative;
                 &::after {
                     content: "";
@@ -20,7 +21,7 @@
                     display: block;
                     position: absolute;
                     left: 0;
-                    bottom: -10px;
+                    bottom: -13px;
                     z-index: 100;
                     background: $main-color;
                 }
@@ -31,6 +32,7 @@
             color: #000000;
             font: bold 1.429rem/100% $font-head;
             span {
+                display: inline-block;
                 position: relative;
                 &:after {
                     content: "";
@@ -39,7 +41,7 @@
                     display: block;
                     position: absolute;
                     left: 0;
-                    bottom: -10px;
+                    bottom: -13px;
                     z-index: 100;
                     background: $main-color;
                 }
@@ -53,10 +55,11 @@
             }
         }
         &--content {
-            margin: 15px 0 40px 0;
+            margin: 18px 0 40px 0;
             color: #000000;
             font: bold 1.857rem/100% $font-head;
             span {
+                display: inline-block;
                 position: relative;
                 &:after {
                     content: "";
@@ -65,7 +68,7 @@
                     display: block;
                     position: absolute;
                     left: 0;
-                    bottom: -10px;
+                    bottom: -13px;
                     z-index: 100;
                     background: $main-color;
                 }
@@ -76,6 +79,7 @@
             color: #ffffff;
             font: normal 2.571rem/100% $font-title-extra;
             span {
+                display: inline-block;
                 position: relative;
                 &::after {
                     content: "";
@@ -84,7 +88,7 @@
                     display: block;
                     position: absolute;
                     left: 0;
-                    bottom: -15px;
+                    bottom: -25px;
                     z-index: 100;
                     background: $main-color;
                 }
@@ -140,15 +144,12 @@
         }
         .event-details {
             p {
-                margin: 0;
+                margin-bottom: 0;
                 color: #ffffff;
                 display: inline-block;
             }
             .icon {
                 opacity: .7;
-            }
-            .icon--location {
-                margin-left: 40px;
             }
             &--form {
                 .icon--calendar {
@@ -224,14 +225,28 @@
                 position: relative;
                 &::before {
                     content: "";
-                    width: 11px;
-                    height: 11px;
+                    width: 10px;
+                    height: 10px;
                     position: absolute;
                     left: 3px;
-                    top: 7px;
+                    top: 8px;
                     border-radius: 50%;
                     background: $main-color;
                 }
+            }
+            &.list--file {
+                margin: 25px 0 25px 0;
+            }
+        }
+        .col-left {
+
+        }
+        .col-right {
+            p {
+                margin: 0;
+            }
+            .author-name {
+                margin-bottom: 1rem;
             }
         }
 
@@ -253,6 +268,7 @@
             top: 20px;
             left: 0;
             z-index: 100;
+            text-align: left;
         }
         img {
             min-width: 100%;
@@ -262,22 +278,30 @@
         }
     }
     &-action {
+        &--top,
+        &--bottom {
+            .contentbox-action-hld {
+                @extend .d-flex;
+                @extend .justify-content-between;
+                @extend .align-items-center;
+            }
+            .list--social {
+                margin: 0 0 0 10px;
+                .list-item--envelope {
+                    margin-left: 20px;
+                }
+            }
+        }
         &--top {
             margin: 20px 0;
+            .list--social {
+                .list-item--print {
+                    margin-right: 20px;
+                }
+            }
         } 
         &--bottom {
             margin: 30px 0;
-        }
-        .btn {
-            margin: 0 20px;
-            vertical-align: top;
-        }
-        .list--social {
-            margin: 0;
-            vertical-align: top;
-            .list-item--envelope {
-                margin-left: 20px;
-            }
         }
         .price-hld {
             display: inline-block;
@@ -370,6 +394,7 @@
     &--social {
         display: inline-block;
         vertical-align: middle;
+        line-height: 100%;
         .list-item {
             margin: 0;
             padding: 0;
@@ -416,10 +441,19 @@
         margin: 25px 0 25px 5px;
         .list-item {
             margin: 10px 0 10px 5px;
-            padding: 0;
+            padding: 0 0 0 28px;
             list-style: none;
             &::before {
-                display: none;
+                background: none;
+                border-radius: unset;
+                content: "";
+                width: 18px;
+                height: 23px;
+                display: inline-block;
+                @include inline-svg-icon("icon-pdf", #ffffff, center, 18px 23px);
+                position: absolute;
+                top: 3px;
+                left: 0;
             }
             a {
                 color: #000000;
